assets/css/mixins/overrides/variables.scss
@import "bootstrap/functions";
@import "bootstrap/mixins";
@import "bootstrap/variables";

@font-face {
  font-family: 'Cascadia Code';
  src: url(/assets/fonts/CascadiaCode.ttf) format('truetype');
}

$font-family-base: 'Cascadia Code', $font-family-monospace;

$blue:    #42A5F5;
$indigo:  #6610f2 !default;
$purple:  #6f42c1 !default;
$pink:    #D81B60;
$red:     #FF443E;
$orange:  #fd7e14 !default;
$yellow:  #FFC135;
$green:   #C3D82C;
$cyan:    #00ACC1;

$white:    #F5F5F5;
$gray-100: #f8f9fa !default;
$gray-200: #e9ecef !default;
$gray-300: #dee2e6 !default;
$gray-400: #ced4da !default;
$gray-500: #adb5bd !default;
$gray-600: #6c757d !default;
$gray-700: #495057 !default;
$gray-800: #343a40 !default;
$gray-900: #212529 !default;
$black:    #252525;

$body-bg: #151515;
$body-color: #A1B0B8;

$transition-collapse: 0;

$spacers: (
  6: ($spacer * 4),
  7: ($spacer * 4.5),
  8: ($spacer * 5),
  9: ($spacer * 5.5),
  10: ($spacer * 6)
);

